# StoryForge

./: .gitignore  LICENSE  README.md  agent_rules.md  index.html  package-lock.json  package.json  run.sh  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
backend/: pyproject.toml
backend/src/backend/: __init__.py  project.py
backend/tests/: test_project.py
docs/: decisions.md  design.md  status.md  todo.md
docs/schemas/: schema_v1.md
electron/: main.cjs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DependencyPanel.tsx  EditorPanel.tsx  TreePanel.tsx
frontend/src/store/: projectStore.ts
frontend/src/types/: project.ts
frontend/src/utils/: fileUtils.ts
scripts/: postinst.sh
src/: App.tsx  constants.ts  index.css
src/__tests__/: constants.test.ts
src/components/: DependencyPanel.tsx  EditorPanel.tsx  ErrorBoundary.tsx  Header.tsx  HighlightedTextarea.tsx  Hint.tsx  LLMSettingsPanel.tsx  Modal.tsx  NewProjectDialog.tsx  TreePanel.tsx
src/components/editor/: OutputSection.tsx  PromptPreviewModal.tsx  StageTabs.tsx  ThinkingPreview.tsx
src/data/: defaultProject.ts
src/hooks/: useDragReorder.ts  useInlineEdit.ts  useKeyboardShortcuts.ts  useResize.ts  useStaleRegeneration.ts
src/services/: llmService.ts
src/store/: hintsStore.ts  llmStore.ts  projectStore.ts
src/types/: file-system-access.d.ts  index.ts  llm.ts  project.ts
src/utils/: fileUtils.ts  nameValidation.ts  referenceUtils.ts  staleness.ts  tokenUtils.ts
(+5 files in other folders)
